--- a/pages/motion/utilities.mdx
+++ b/pages/motion/utilities.mdx
@@ -41,6 +41,12 @@ export default Template("Utilities")
 
 ---
 
+## usePresence
+
+<APIFunction name="usePresence" />
+
+---
+
 ## useDragControls
 
 <APIFunction name="useDragControls" />
