--- a/pages/motion/component.mdx
+++ b/pages/motion/component.mdx
@@ -40,7 +40,7 @@ These work exactly like their static counterparts, but offer props that allow yo
 ```jsx
 import { motion } from "framer-motion"
 
-export const MyComponent () => (
+export const MyComponent = () => (
   <motion.div
     animate={{ rotate: 360 }}
     transition={{ duration: 2 }}
