--- a/pages/motion/animation.mdx
+++ b/pages/motion/animation.mdx
@@ -148,7 +148,7 @@ They're passed into `motion` components via the `variants` prop.
 
 <div>
 
-These variants can be referred to by label, whereever you can set an animation target.
+These variants can be referred to by label, wherever you can set an animation target.
 
 </div>
 
