--- a/pages/motion/motionvalue.mdx
+++ b/pages/motion/motionvalue.mdx
@@ -168,6 +168,12 @@ These child components can be used exactly like the parents. They can be passed 
 
 ---
 
+## useElementScroll
+
+<APIFunction name="useElementScroll()" />
+
+---
+
 ## useViewportScroll
 
 <APIFunction name="useViewportScroll()" />
