Remove occurences of Framer X (#109)

--- a/pages/canvas-components.mdx
+++ b/pages/canvas-components.mdx
@@ -21,7 +21,7 @@ export default Template("Canvas components")
 
 <div>
 
-Every design component you define on the canvas in Framer X can be imported directly from code, including defined properties. They are referenced from the `code/canvas.tsx` file, which holds all design components. To make a component in Framer X:
+Every design component you define on the canvas in Framer can be imported directly from code, including defined properties. They are referenced from the `code/canvas.tsx` file, which holds all design components. To make a component in Framer:
 
 - Select any Frame on the canvas
 - Switch to the components panel
