--- a/pages/data.mdx
+++ b/pages/data.mdx
@@ -13,7 +13,7 @@ export default Template("Data")
 # Data & Overrides
 
 <span className="lead">
-  A way to share data between components within Framer X,
+  A way to share data between components within Framer,
   using code overrides.
 </span>
 
