--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -74,7 +74,7 @@ type CardProps = { title: string }
 
 ### Installation
 
-The Framer API was designed to work closely with [Framer X](https://framer.com), but is great as a standalone library. You can install it via [npm](https://www.npmjs.com/), via your Command Line.
+The Framer API was designed to work closely with [Framer](https://framer.com), but is great as a standalone library. You can install it via [npm](https://www.npmjs.com/), via your Command Line.
 
 ```jsx
 // Install Framer via command line
@@ -92,11 +92,11 @@ import { Frame, Scroll, useCycle } from "framer"
 
 ---
 
-### Framer X
+### Framer
 
 <div>
 
-To learn how to start using the Framer API within Framer X, you can watch this short **Framer Playground** video tutorial. It covers the following topics.
+To learn how to start using the Framer API within Framer, you can watch this short **Framer Playground** video tutorial. It covers the following topics.
 
 - How to create new code components.
 - Where code components live.
@@ -105,7 +105,7 @@ To learn how to start using the Framer API within Framer X, you can watch this s
 - How error handling works.
 
 <CTA
-  name="Download Framer X"
+  name="Discover Framer"
   link="https://www.framer.com/"
 />
 
