--- a/pages/motion/index.mdx
+++ b/pages/motion/index.mdx
@@ -27,7 +27,7 @@ export default Template()
 
 ## Overview
 
-Motion shares the simple animation and gesture API as the Framer X library, while maintaining HTML and SVG semantics.
+Motion shares the simple animation and gesture API as the Framer library, while maintaining HTML and SVG semantics.
 
 This makes it simple to port your high-fidelity prototypes to a production-ready environment, or make something completely new!
 
