--- a/pages/property-controls.mdx
+++ b/pages/property-controls.mdx
@@ -12,12 +12,12 @@ export default Template("Property Controls")
 
 <span className="lead">
   Add controls to your components to allow customization via
-  the Framer X interface.
+  the Framer interface.
 </span>
 
 <div>
   Property Controls allow users to pass properties (or
-  props) to a code component through the Framer X interface.
+  props) to a code component through the Framer interface.
   When a user selects a code component on the canvas, its
   Property Controls are visible on the properties panel. As
   a component author, it’s up to you to decide which
@@ -68,7 +68,7 @@ addPropertyControls(MyComponent, {
 
 Controls can be hidden by adding the `hidden` function to the property description. The function receives an object containing the set properties and returns a `boolean`. In this example we hide the `text` property entirely when the connected property (the `toggle`) is `false`.
 
-Now you can toggle the visibilty of the text property control by changing the `toggle` boolean from within the property panel in Framer X.
+Now you can toggle the visibilty of the text property control by changing the `toggle` boolean from within the property panel in Framer.
 
 </div>
 
