--- a/pages/render-target.mdx
+++ b/pages/render-target.mdx
@@ -13,7 +13,7 @@ export default Template("Render Target")
 
 <span className="lead">
   The current environment of a component. Often the canvas
-  or preview in Framer X.
+  or preview in Framer.
 </span>
 
 Components can use the `RenderTarget.current()` method to check for the environment within their components and vary rendering accordingly. The most common case would be to improve performance while rendering in the canvas, where components that take too long to render will be replaced with a placeholder. The `RenderTarget.hasRestrictions()` method can be used to check explicitly for this case.
