--- a/pages/tutorial.mdx
+++ b/pages/tutorial.mdx
@@ -67,7 +67,7 @@ As you progress, things will become more advanced so try to get as far as you ca
 
 <div>
 
-We’ve prepared starter files for CodeSandbox and Framer X with React and the Framer library setup to help you get started quickly.
+We’ve prepared starter files for CodeSandbox and Framer with React and the Framer library setup to help you get started quickly.
 
 <Button
   name="CodeSandbox Starter File"
@@ -77,14 +77,14 @@ We’ve prepared starter files for CodeSandbox and Framer X with React and the F
 <span> &nbsp; </span>
 
 <Button
-  name="Framer X Starter File"
+  name="Framer Starter File"
   link="https://static.framer.com/api/tutorial-start.framerx"
 />
 
 <br /><br />
 
 - **CodeSandbox:** Open the starter sandbox and create a fork of the sandbox.
-- **Framer X:** Download the project and open in Framer X.
+- **Framer:** Download the project and open in Framer Desktop.
 
 Each setup includes two React starter files: `index.tsx` and `Slider.tsx`. Let’s review the files once you have your tutorial setup and ready to go.
 
@@ -107,7 +107,7 @@ This file is responsible for rendering your entire project. It is also your top 
 - Inside the app `Frame` is a placeholder `Frame` that has a logo image centered with a 4px radius.
 - On the last line, we tell `render()` to place the `App` component into the root tag of your HTML document.
 
-If you’re doing this tutorial in Framer X, this file will not include any references to `render` since Framer handles rendering components for you.
+If you’re doing this tutorial in Framer, this file will not include any references to `render` since Framer handles rendering components for you.
 
 </div>
 
@@ -820,7 +820,7 @@ Below are completed tutorial files which may be helpful if you ran into any issu
 <span> &nbsp; </span>
 
 <Button
-  name="Framer X Completed Tutorial"
+  name="Framer Completed Tutorial"
   link="https://static.framer.com/api/tutorial-complete.framerx"
 />
 </div>
