--- a/pages/utilities.mdx
+++ b/pages/utilities.mdx
@@ -307,3 +307,9 @@ export function MyComponent() {
 ## useViewportScroll
 
 <APIFunction name="useViewportScroll()" />
+
+---
+
+## useIsInCurrentNavigationTarget
+
+<APIFunction name="useIsInCurrentNavigationTarget()" />
